# exchange_interface

./: readme.md
orderbook/: .gitignore  cargo.toml  config.json  orderbook - Shortcut.lnk  readme.txt
orderbook/aggregated_order_book/: Cargo.toml
orderbook/aggregated_order_book/src/: lib.rs
orderbook/aggregated_order_book/src/tests/: book_tests.rs  mod.rs
orderbook/app/: Cargo.toml  log_config.yaml
orderbook/app/src/: main.rs
orderbook/client_orderbook/: Cargo.toml
orderbook/client_orderbook/src/: main.rs
orderbook/common/: Cargo.toml
orderbook/common/src/: binance_config_utils.rs  bitstamp_config_utils.rs  lib.rs  tests.rs
orderbook/gateway_in/: Cargo.toml  config.json  log_config.yaml
orderbook/gateway_in/src/: lib.rs  settings.rs
orderbook/gateway_in/src/exchanges_services/: binance.rs  bitstamp.rs  mod.rs
orderbook/gateway_in/src/tests/: binance_tests.rs  bitstamp_tests.rs  mocks.rs  mod.rs  unit_tests.rs
orderbook/orderbook_client/: Cargo.toml  build.rs
orderbook/orderbook_client/src/: main.rs
orderbook/orderbook_server/: Cargo.toml  config.json  log_config.yaml
orderbook/orderbook_server/src/: aggregated_order_book.rs  main.rs  orderbook.rs  orderbook_service.rs
orderbook/orderbook_server/src/tests/: book_tests.rs
orderbook/webserver/: .babelrc  Cargo.toml  build.rs  log_config.yaml  package-lock.json  package.json  webpack.config.js
orderbook/webserver/src/: actix_actors.rs  main.rs  orderbook.rs
orderbook/webserver/www/src/: App.js  app.css  index.html  index.js  template.html
