[package]
name = "common"
version = "0.1.0"
authors = ["L3pereira <75404065+L3pereira@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
rust_decimal = "1.10.3"
derive_more = "0.99.13"
thiserror = "1.0"
anyhow = "1.0.42"
tokio = { version = "1.5.0", features = ["full"] }
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }