[package]
name = "gateway_in"
version = "0.1.0"
authors = ["L3pereira <75404065+L3pereira@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
mockall = "0.9.1"
pretty_assertions = "0.7.2"
async-trait = "0.1.50"

[dependencies]
common = {path = "../common"}
log = "0.4.13"
log4rs = "1.0.0"
url = "2.2.1"
serde_json = "1.0.59"
serde = { version = "1.0", features = ["derive"] }
rust_decimal = "1.10.3"
reqwest = "0.11.3"
futures = "0.3"
futures-util = "0.3.14"
tokio = { version = "1.5.0", features = ["full"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
tokio-tungstenite = {version ="0.14.0", features = ["native-tls"] }
anyhow = "1.0.42"
async-trait = "0.1.50"
