[package]
name = "orderbook_client"
version = "0.1.0"
authors = ["L3pereira <75404065+L3pereira@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
tonic-build = "0.4.2"

[dependencies]
common = {path = "../common"}
gateway_in = {path = "../gateway_in"}
log = "0.4.13"
log4rs = "1.0.0"
url = "2.2.1"
rust_decimal = "1.10.3"
futures = "0.3"
futures-util = "0.3.14"
tokio = { version = "1.5.0", features = ["full"] }
prost = "0.7.0"
tonic = {version="0.4.3", features = ["tls"]}
async-trait = "0.1.50"
tokio-stream = { version = "0.1.5", features = ["sync"] }
tokio-tungstenite = {version ="0.14.0", features = ["native-tls"] }
